--- a/doc/tutorials/topics/amq2api_upload_todo_app_icon.adoc
+++ b/doc/tutorials/topics/amq2api_upload_todo_app_icon.adoc
@@ -15,7 +15,7 @@ to upload it.
 
 .. In a new browser tab, paste the URL for your OpenAPI (Swagger) specification.
 .. At the end of the URL, replace `swagger.json` with `images/todo_icon.png` 
-and click *Enter*. For example: 
+and click *Enter* to display the icon. For example: 
 `\https://todo-app-proj217402.6a63.fuse-ignite.openshiftapps.com/images/todo_icon.png`.
 
 . Save the `todo_icon.png` image.
@@ -23,9 +23,11 @@ and click *Enter*. For example:
 . In {prodname}, in the *API Client Connectors* tab, click the entry for
 the *Todo App API* to display its details.
 
-. On the *Connector Details* page, click *Browse*.
+. On the *Connector Details* page, below the *Base URL* field, click *Edit*. 
+
+. Next to the default connector icon, click *Choose File*.
 
 . Navigate to `todo_icon.png`, select it, and click *Open*.
+The icon appears near the top of the connector details page.
 
-. Refresh the display of the *Connector Details* page.
-The image now appears on the left.
+. Below the *Base URL* field, click *Save*. 
