--- a/doc/tutorials/topics/amq2api_add_mapping_step.adoc
+++ b/doc/tutorials/topics/amq2api_add_mapping_step.adoc
@@ -24,3 +24,9 @@ the API accesses.
 . In the *Source* panel, click the `task` field.
 . In the *Target* panel, expand the `body` field and click `task`.
 . In the upper right, click *Done*.
+
+.Result
+The integration is complete and it is ready to be published. 
+On the left, in the integration visualization panel, you might see a
+image:shared/images/WarningIcon.png[warning] Data Type Mismatch 
+warning icon. You can ignore it. 
