--- a/doc/tutorials/topics/amq2api_create_rest_api_connector.adoc
+++ b/doc/tutorials/topics/amq2api_create_rest_api_connector.adoc
@@ -7,16 +7,16 @@
 {prodname} can create connectors for REST APIs
 that support Hypertext Transfer Protocol (HTTP)/1.0 or HTTP/1.1.
 To do this, {prodname} requires a valid
-OpenAPI 2.0 specification that describes a REST API that you want to connect to.
+OpenAPI 2.0 document that describes a REST API that you want to connect to.
 
 Your {prodname} environment provides the To Do app, which has a REST API
 for accessing a database that contains tasks. Your environment also provides
-an OpenAPI (Swagger) specification for this API.
+an OpenAPI (Swagger) document for this API.
 
 .Procedure
 
 . Identify the URL for your {prodname} environment's copy of the
-OpenAPI specification:
+OpenAPI document:
 .. In the {prodname} navigation panel, click *Home*.
 .. Copy the URL into a text editor.
 .. At the beginning of the URL, insert `*todo-*`.
@@ -28,16 +28,24 @@ OpenAPI specification:
 The result is something like this:
 `\http://todo-app-proj217402.6a63.fuse-ignite.openshiftapps.com/swagger.json`
 
++
+[NOTE]
+Specification of `http` rather than `https` avoids a runtime error 
+if TLS certificates are not valid.  In production 
+environments, ensure that valid certificates are in place, 
+and always specify secure URLs (`https`) to obtain an OpenAPI document. 
+
+
 . In the {prodname} navigation panel, click *Customizations*.
 . Click *Create API Connector*.
 . Select *Use a URL*.
-. In the input box, paste the URL for your OpenAPI specification and
+. In the input box, paste the URL for your OpenAPI document and
 click *Next*.
 . On the *Review Actions* page, click *Next*. If you see
 a warning, you can ignore it.
 . Click *Next* again to accept *HTTP Basic Authorization*.
 . On the *Review/Edit Connector Details* page, {prodname} populates
-the fields with values from the OpenAPI specification.
+the fields with values from the OpenAPI document.
 .. If you want to, you can
 change the values in the *Connector Name* and *Description* fields.
 .. Confirm that the value in the *Host* field is correct. For example,
