--- a/doc/tutorials/topics/amq2api_upload_todo_app_icon.adoc
+++ b/doc/tutorials/topics/amq2api_upload_todo_app_icon.adoc
@@ -13,7 +13,7 @@ to upload it.
 
 . Display the To Do app icon:
 
-.. In a new browser tab, paste the URL for your OpenAPI (Swagger) specification.
+.. In a new browser tab, paste the URL for your OpenAPI (Swagger) document.
 .. At the end of the URL, replace `swagger.json` with `images/todo_icon.png` 
 and click *Enter* to display the icon. For example: 
 `\https://todo-app-proj217402.6a63.fuse-ignite.openshiftapps.com/images/todo_icon.png`.
