--- a/doc/connecting/topics/adding_amq_connection_middle.adoc
+++ b/doc/connecting/topics/adding_amq_connection_middle.adoc
@@ -4,12 +4,12 @@
 [id='adding-amq-connection-middle_{context}']
 = Publish AMQ messages in the middle of an integration
 
-In the middle of an integration, to publish messages to an AMQ broker, 
-add an AMQ connection between the start and
+In the middle of an integration, to publish messages to a Red Hat AMQ broker, 
+add a Red Hat AMQ connection between the start and
 finish connections. 
 
 .Prerequisites
-* You created a connection to the AMQ broker that you want to publish messages to.
+* You created a connection to the Red Hat AMQ broker that you want to publish messages to.
 * You are creating or editing an integration.
 * The integration's start and finish connections have already been
 added. 
@@ -20,7 +20,7 @@ added.
 that is in the location where you want to add the connection.
 . Click *Add a connection*. 
 
-. On the *Choose a Connection* page, click the AMQ connection that you
+. On the *Choose a Connection* page, click the Red Hat AMQ connection that you
 want the integration to use after the start connection and before
 the finish connection.
 
