--- a/doc/tutorials/topics/as_amq2api-create-integration.adoc
+++ b/doc/tutorials/topics/as_amq2api-create-integration.adoc
@@ -1,5 +1,5 @@
 // Module included in the following assemblies:
-// amq2api_intro.adoc
+// as_amq2api-intro.adoc
 
 :parent-context: {context}
 [id='amq2api-create-integration_{context}']
@@ -19,14 +19,14 @@ To create and deploy the AMQ to REST API sample integration, the main steps are:
 * You created an API Client connection to the provided Todo app.
 * You uploaded the extension that provides the Damage Reporter step. 
 
-include::amq2api_choose_start.adoc[leveloffset=+1]
+include::p_amq2api-choose-start.adoc[leveloffset=+1]
 
-include::amq2api_choose_finish.adoc[leveloffset=+1]
+include::p_amq2api-choose-finish.adoc[leveloffset=+1]
 
-include::amq2api_add_damage_reporter_step.adoc[leveloffset=+1]
+include::p_amq2api-add-damage-reporter-step.adoc[leveloffset=+1]
 
-include::amq2api_add_mapping_step.adoc[leveloffset=+1]
+include::p_amq2api-add-mapping-step.adoc[leveloffset=+1]
 
-include::amq2api_name_and_publish.adoc[leveloffset=+1]
+include::p_amq2api-name-and-publish.adoc[leveloffset=+1]
 
 :context: {parent-context}
