--- a/doc/tutorials/topics/p_sf2db-name-and-publish.adoc
+++ b/doc/tutorials/topics/p_sf2db-name-and-publish.adoc
@@ -1,23 +1,23 @@
 // Module included in the following assemblies:
-// t2sf_create_integration.adoc
+// as_sf2db-create-integration.adoc
 
-[id='t2sf-name-and-publish_{context}']
+[id='sf2db-name-and-publish_{context}']
 = Give the integration a name and deploy it
 
-When the Twitter to Salesforce sample integration is complete then you
+When the Salesforce to database sample integration is complete then you
 can deploy it and see how it works. 
 
 .Prerequisites
-* The integration's start connection is Twitter.
-* The integration's finish connection is Salesforce. 
-* The integration has a filter step.
+* The integration's start connection is Salesforce. 
+* The integration's finish connection is to the sample database that
+is provided with {prodname}.
 * You just added a data mapping step to the integration. 
 
 .Procedure
-. In {prodname}, at the top of the left panel, in the *Integration Name* field,
-enter a name of your choice that distinguishes this integration
-from any other integrations. For
-example: `*Twitter to Salesforce Sample Integration*`.
+
+. In {prodname}, in the upper right, click *Publish* to give it a name.
+. In the *Integration Name* field, enter a name for the
+integration. For example, `*Salesforce to Database Sample Integration*`.
 . In the upper right corner, click *Publish*.
 
 +
