--- a/doc/tutorials/topics/p_t2sf-choose-finish.adoc
+++ b/doc/tutorials/topics/p_t2sf-choose-finish.adoc
@@ -1,5 +1,5 @@
 // Module included in the following assemblies:
-// t2sf_create_integration.adoc
+// as_t2sf-create-integration.adoc
 
 [id='t2sf-choose-finish-connection_{context}']
 = Choose the finish connection
